--- a/app/index.html
+++ b/app/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 
-	<title>Start template</title>
+	<title>Hookah</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +15,7 @@
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
 	<!-- Template Basic Images End -->
-	
+
 	<!-- Custom Browsers Color Start -->
 	<meta name="theme-color" content="#000">
 	<!-- Custom Browsers Color End -->
@@ -24,23 +25,300 @@
 	<link rel="stylesheet" href="css/main.min.css">
 
 </head>
+
 <body>
 
-	<section class="section-first">
+	<header class="header">
 		<div class="container">
-			First-section
+			<h1 class="header__title">
+				Открой <strong>прибыльный бизнес</strong> по франшизе
+				кальянных <strong>нового формата</strong>
+			</h1>
+			<div class="header__logo">
+				<span class="header__logo-green">D</span>
+				<span class="header__logo-orange">O</span>
+				<span class="header__logo-blue">X</span>
+				<img class="header__logo-pink" src="img/header__logo-o.png" alt="O">
+			</div>
+			<div class="header__profit">
+				<div class="header__profit-text">Чистая прибыль от</div>
+				<div class="header__profit-sum">170 000 руб.</div>
+				<div class="header__profit-text">в месяц</div>
+			</div>
+		</div>
+	</header>
+
+	<section class="franchise">
+		<div class="container">
+			<h2 class="franchise__title">франшиза DOXO сегодня - это:</h2>
+			<div class="franchise__row">
+				<div class="franchise__left">
+					<img class="franchise__logo" src="img/franchise__logo.png" alt="Smoke & play">
+				</div>
+				<div class="franchise__right">
+					<ul class="franchise__list">
+						<li class="franchise__item">
+							Сеть собственных кальянных, которые приносят
+							<span class="franchise__item-blue">прибыль с первого месяца</span>
+						</li>
+						<li class="franchise__item">
+							Полностью <span class="franchise__item-green">уникальный</span> игровой формат заведений
+						</li>
+						<li class="franchise__item">
+							<span class="franchise__item-orange">2000 клиентов</span> каждый месяц
+						</li>
+						<li class="franchise__item">
+							Окупаемость инвестиций <span class="franchise__item-blue">11 месяцев</span>
+						</li>
+						<li class="franchise__item">
+							Невысокий паушальный взнос <span class="franchise__item-pink">200 000 руб.</span>
+						</li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</section>
 
-	<section class="section-second">
+	<section class="trade">
 		<div class="container">
-			Second-section
+			<div class="trade__row">
+				<div class="trade__left">
+					<img src="img/trade__left-img.jpg" alt="DOXO" class="trade__left-img">
+				</div>
+				<div class="trade__right">
+					<div class="trade__item">
+						<h2 class="trade__title">что сейчас происходит на рынке</h2>
+						<div class="trade__text">
+							<p>Ежегодно в кальянной сфере России наблюдается стабильный рост.</p>
+							<p>В 2020 году спросом будут пользоваться заведения с уникальным форматом и авторским подходом.</p>
+							<p>Рынок еще формируется и не имеет сильной конкуренции. <br>
+								Успей поймать этот тренд с франшизой DOXO</p>
+						</div>
+						<button class="btn trade__btn" type="button">Скачать презентацию</button>
+					</div>
+				</div>
+			</div>
+			<div class="trade__img">
+				<img src="img/trade__img.jpg" alt="DOXO">
+			</div>
+
+
 		</div>
 	</section>
 
-	
+	<section class="advantage">
+		<div class="container">
+			<h2 class="advantage__title">преимущества бизнеса</h2>
+			<div class="advantage__row">
+				<div class="advantage__col">
+					<div class="advantage__icon advantage__icon--1"></div>
+					<div class="advantage__text">
+						Нет сезонности
+					</div>
+				</div>
+				<div class="advantage__col">
+					<div class="advantage__icon advantage__icon--2"></div>
+					<div class="advantage__text">
+						Низкие затраты<br>
+						на рекламу
+					</div>
+				</div>
+				<div class="advantage__col">
+					<div class="advantage__icon advantage__icon--3"></div>
+					<div class="advantage__text">
+						Штат сотрудников
+						всего два человека
+					</div>
+				</div>
+				<div class="advantage__col">
+					<div class="advantage__icon advantage__icon--4"></div>
+					<div class="advantage__text advantage__text--small">
+						Прибыльное
+						заведение можно
+						открыть даже<br>
+						в небольшом городе
+					</div>
+				</div>
+				<div class="advantage__col">
+					<div class="advantage__icon advantage__icon--5"></div>
+					<div class="advantage__text advantage__text--smaller">
+						Возможность получить
+						эксклюзив и построить
+						сеть прибыльных
+						заведений в своем
+						городе
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</section>
+
+	<section class="city">
+		<div class="container">
+			<h3 class="city__title">узнайте свободен ли ваш город
+				и как получить эксклюзив</h3>
+			<div class="trade__btn">
+				<button class="btn" type="button">Получить эксклюзив</button>
+			</div>
+		</div>
+	</section>
+
+	<section class="get">
+		<div class="container">
+			<h3 class="get__title">что вы получите с франшизой doxo</h3>
+			<div class="get__row">
+				<div class="get__col">
+					<div class="get__item get__item--1">
+						Помощь в подборе
+						помещения
+					</div>
+				</div>
+
+				<div class="get__col">
+					<div class="get__item get__item--2">
+						Помощь по найму и
+						обучению персонала
+					</div>
+				</div>
+
+				<div class="get__col">
+					<div class="get__item get__item--3">
+						Помощь с дизайном
+						помещения
+					</div>
+				</div>
+
+				<div class="get__col">
+					<div class="get__item get__item--4">
+						Закрытый
+						чат поддержки
+					</div>
+				</div>
+
+				<div class="get__col">
+					<div class="get__item get__item--5">
+						Менеджера по запуску и сопровождению
+					</div>
+				</div>
+
+				<div class="get__col">
+					<div class="get__item get__item--6">
+						Контакты всех
+						поставщиков
+					</div>
+				</div>
+			</div>
+
+
+		</div>
+	</section>
+
+	<section class="report">
+		<div class="container">
+			<h3 class="report__title">уже в первый месяц вы получите чистую прибыль свыше 60 000 руб.</h3>
+			<div class="report__subtitle">Окупаемость вложений <span class="report__subtitle-mark">всего 11 месяцев</span>
+			</div>
+		</div>
+		<div class="report__img-wrap">
+			<img src="img/report__img.jpg" alt="report" class="report__img">
+		</div>
+		<div class="report__btn">
+			<button class="btn" type="button">Скачать фин. модель</button>
+		</div>
+	</section>
+
+	<section class="chat">
+		<div class="container">
+			<div class="chat__row">
+				<div class="chat__left">
+
+					<img src="img/chat__left-img.png" alt="chat" class="chat__left-img">
+
+				</div>
+				<div class="chat__right">
+
+					<div class="chat__item">
+						<h3 class="chat__title">
+							с вами всегда
+							на связи
+							профессионалы
+							в закрытом чате
+						</h3>
+						<p class="chat__text">
+								также возможен приезд опытной команды запуска
+								в ваш город – проведем успешное открытие бизнеса вместе!
+						</p>
+						<button class="btn chat__btn" type="button">Узнать подробности</button>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</section>
+
+	<section class="numbers">
+		<div class="container">
+			<h3 class="numbers__title">важные цифры</h3>
+			<div class="numbers__row">
+				<div class="numbers__col">
+
+					<div class="numbers__value">
+						от  <span class="numbers__value-mark">1 млн.</span> руб.
+					</div>
+					<div class="numbers__text">Инвестиции в открытие</div>
+
+				</div>
+				<div class="numbers__col">
+
+					<div class="numbers__value numbers__value--small">
+						от <span class="numbers__value-mark numbers__value-mark--small">200 000</span> руб.
+					</div>
+					<div class="numbers__text">Паушальный взнос </div>
+
+				</div>
+				<div class="numbers__col">
+
+					<div class="numbers__value">
+						от  <span class="numbers__value-mark">5 000</span> руб.
+					</div>
+					<div class="numbers__text">Роялти</div>
+
+				</div>
+				<div class="numbers__col">
+
+					<div class="numbers__value numbers__value--small">
+						от <span class="numbers__value-mark numbers__value-mark--small">300 000</span> руб.
+					</div>
+					<div class="numbers__text">Доход</div>
+
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="places">
+		<div class="container">
+			<h3 class="places__title">наши заведения</h3>
+			<div class="places__gallery">Gallery!!!!!!!!!!!!!</div>
+		</div>
+	</section>
+
+	<div class="agreement">
+		<div class="container">
+			<h3 class="agreement__title">
+				вы получаете право на использование нашего бренда и полноценный франчайзинговый договор 
+			</h3>
+			<p class="agreement__text">Ваши вложения во франшизу надежно юридически защищены</p>
+			<button class="btn agreement__btn" type="button">Запросить договор</button>
+		</div>
+	</div>
+
+
+
+
 	<!-- <script src="js/jquery-3.4.1.min.js"></script> -->
 	<script src="js/common.js"></script>
-
 </body>
+
 </html>
