--- a/app/index.html
+++ b/app/index.html
@@ -364,7 +364,7 @@
 		</div>
 	</section>
 
-	<!-- <section class="photo">
+	<section class="photo">
 		<div class="container">
 			<h3 class="photo__title"> так может выглядеть твоя
 				собственная кальянная</h3>
@@ -376,13 +376,13 @@
 				<div class="swiper-wrapper">
 				
 					<div class="swiper-slide">
-						<img class="photo__slider-item" src="img/photo__slide-3.jpg" alt="photo">
+						<img class="photo__slider-img" src="img/photo__slide-3.jpg" alt="photo">
 					</div>
 					<div class="swiper-slide swiper-slide-active">
-						<img class="photo__slider-item" src="img/photo__slide-1.jpg" alt="photo">
+						<img class="photo__slider-img" src="img/photo__slide-1.jpg" alt="photo">
 					</div>
 					<div class="swiper-slide">
-						<img class="photo__slider-item" src="img/photo__slide-2.jpg" alt="photo">
+						<img class="photo__slider-img" src="img/photo__slide-2.jpg" alt="photo">
 					</div>
 				</div>
 				
@@ -391,7 +391,7 @@
 
 			</div>
 		</div>
-	</section> -->
+	</section>
 
 	<section class="feedback">
 		<div class="container">
