--- a/app/index.html
+++ b/app/index.html
@@ -386,8 +386,10 @@
 					</div>
 				</div>
 				
-				<div class="swiper-button-prev"></div>
-				<div class="swiper-button-next"></div>
+				<div class="swiper-button-wrap">
+					<div class="swiper-button-prev"></div>
+					<div class="swiper-button-next"></div>
+				</div>
 
 			</div>
 		</div>
