--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
 	<!-- <link rel="stylesheet" href="css/bootstrap-grid.min.css"> -->
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/swiper.min.css">
+	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/main.min.css">
 
 </head>
@@ -35,13 +36,13 @@
 				Открой <strong>прибыльный бизнес</strong> по франшизе
 				кальянных <strong>нового формата</strong>
 			</h1>
-			<div class="header__logo">
+			<div class="header__logo wow bounceInDown">
 				<span class="header__logo-green">D</span>
 				<span class="header__logo-orange">O</span>
 				<span class="header__logo-blue">X</span>
-				<img class="header__logo-pink" src="img/header__logo-o.png" alt="O">
+				<img class="header__logo-pink" src="img/header__logo-o-new.png" alt="O">
 			</div>
-			<div class="header__profit">
+			<div class="header__profit wow pulse" data-wow-iteration="infinite">
 				<div class="header__profit-text">Чистая прибыль от</div>
 				<div class="header__profit-sum">170 000 руб.</div>
 				<div class="header__profit-text">в месяц</div>
@@ -51,27 +52,27 @@
 
 	<section class="franchise">
 		<div class="container">
-			<h2 class="franchise__title">франшиза DOXO сегодня - это:</h2>
+			<h2 class="franchise__title wow fadeInDown">франшиза DOXO сегодня - это:</h2>
 			<div class="franchise__row">
 				<div class="franchise__left">
 					<img class="franchise__logo" src="img/franchise__logo.png" alt="Smoke & play">
 				</div>
 				<div class="franchise__right">
 					<ul class="franchise__list">
-						<li class="franchise__item">
+						<li class="franchise__item wow bounceInRight">
 							Сеть собственных кальянных, которые приносят
 							<span class="franchise__item-blue">прибыль с первого месяца</span>
 						</li>
-						<li class="franchise__item">
+						<li class="franchise__item wow bounceInRight" data-wow-delay=".1s">
 							Полностью <span class="franchise__item-green">уникальный</span> игровой формат заведений
 						</li>
-						<li class="franchise__item">
+						<li class="franchise__item wow bounceInRight" data-wow-delay=".2s">
 							<span class="franchise__item-orange">2000 клиентов</span> каждый месяц
 						</li>
-						<li class="franchise__item">
+						<li class="franchise__item wow bounceInRight" data-wow-delay=".3s">
 							Окупаемость инвестиций <span class="franchise__item-blue">11 месяцев</span>
 						</li>
-						<li class="franchise__item">
+						<li class="franchise__item wow bounceInRight" data-wow-delay=".4s">
 							Невысокий паушальный взнос <span class="franchise__item-pink">200 000 руб.</span>
 						</li>
 					</ul>
@@ -88,7 +89,7 @@
 				</div>
 				<div class="trade__right">
 					<div class="trade__item">
-						<h2 class="trade__title">что сейчас происходит на рынке</h2>
+						<h2 class="trade__title wow fadeInDown">что сейчас происходит на рынке</h2>
 						<div class="trade__text">
 							<p>Ежегодно в кальянной сфере России наблюдается стабильный рост.</p>
 							<p>В 2020 году спросом будут пользоваться заведения с уникальным форматом и авторским подходом.</p>
@@ -109,29 +110,29 @@
 
 	<section class="advantage">
 		<div class="container">
-			<h2 class="advantage__title">преимущества бизнеса</h2>
+			<h2 class="advantage__title wow fadeInDown">преимущества бизнеса</h2>
 			<div class="advantage__row">
-				<div class="advantage__col">
+				<div class="advantage__col wow bounceInLeft" data-wow-delay=".2s">
 					<div class="advantage__icon advantage__icon--1"></div>
 					<div class="advantage__text">
 						Нет сезонности
 					</div>
 				</div>
-				<div class="advantage__col">
+				<div class="advantage__col wow bounceInLeft" data-wow-delay=".1s">
 					<div class="advantage__icon advantage__icon--2"></div>
 					<div class="advantage__text">
 						Низкие затраты<br>
 						на рекламу
 					</div>
 				</div>
-				<div class="advantage__col">
+				<div class="advantage__col wow bounceInLeft">
 					<div class="advantage__icon advantage__icon--3"></div>
 					<div class="advantage__text">
 						Штат сотрудников
 						всего два человека
 					</div>
 				</div>
-				<div class="advantage__col">
+				<div class="advantage__col wow bounceInRight" data-wow-delay=".1s">
 					<div class="advantage__icon advantage__icon--4"></div>
 					<div class="advantage__text advantage__text--small">
 						Прибыльное
@@ -140,7 +141,7 @@
 						в небольшом городе
 					</div>
 				</div>
-				<div class="advantage__col">
+				<div class="advantage__col wow bounceInRight" data-wow-delay=".2s">
 					<div class="advantage__icon advantage__icon--5"></div>
 					<div class="advantage__text advantage__text--smaller">
 						Возможность получить
@@ -157,7 +158,7 @@
 
 	<section class="city">
 		<div class="container">
-			<h3 class="city__title">узнайте свободен ли ваш город
+			<h3 class="city__title wow fadeInDown">узнайте свободен ли ваш город
 				и как получить эксклюзив</h3>
 			<div class="trade__btn">
 				<button class="btn" type="button">Получить эксклюзив</button>
@@ -167,43 +168,43 @@
 
 	<section class="get">
 		<div class="container">
-			<h3 class="get__title">что вы получите с франшизой doxo</h3>
+			<h3 class="get__title  wow fadeInDown">что вы получите с франшизой doxo</h3>
 			<div class="get__row">
-				<div class="get__col">
+				<div class="get__col wow zoomIn">
 					<div class="get__item get__item--1">
 						Помощь в подборе
 						помещения
 					</div>
 				</div>
 
-				<div class="get__col">
+				<div class="get__col wow zoomIn" data-wow-delay=".1s">
 					<div class="get__item get__item--2">
 						Помощь по найму и
 						обучению персонала
 					</div>
 				</div>
 
-				<div class="get__col">
+				<div class="get__col wow zoomIn" data-wow-delay=".2s">
 					<div class="get__item get__item--3">
 						Помощь с дизайном
 						помещения
 					</div>
 				</div>
 
-				<div class="get__col">
+				<div class="get__col wow zoomIn" data-wow-delay=".3s">
 					<div class="get__item get__item--4">
 						Закрытый
 						чат поддержки
 					</div>
 				</div>
 
-				<div class="get__col">
+				<div class="get__col wow zoomIn" data-wow-delay=".4s">
 					<div class="get__item get__item--5">
 						Менеджера по запуску и сопровождению
 					</div>
 				</div>
 
-				<div class="get__col">
+				<div class="get__col wow zoomIn" data-wow-delay=".5s">
 					<div class="get__item get__item--6">
 						Контакты всех
 						поставщиков
@@ -232,7 +233,7 @@
 			<div class="chat__row">
 				<div class="chat__left">
 
-					<img src="img/chat__left-img.png" alt="chat" class="chat__left-img">
+					<img src="img/chat__left-img.png" alt="chat" class="chat__left-img wow pulse" data-wow-iteration="infinite">
 
 				</div>
 				<div class="chat__right">
@@ -260,9 +261,9 @@
 
 	<section class="numbers">
 		<div class="container">
-			<h3 class="numbers__title">важные цифры</h3>
+			<h3 class="numbers__title wow fadeInDown">важные цифры</h3>
 			<div class="numbers__row">
-				<div class="numbers__col">
+				<div class="numbers__col wow bounceInLeft">
 
 					<div class="numbers__value">
 						от <span class="numbers__value-mark">1 млн.</span> руб.
@@ -270,7 +271,7 @@
 					<div class="numbers__text">Инвестиции в открытие</div>
 
 				</div>
-				<div class="numbers__col">
+				<div class="numbers__col wow bounceInLeft" data-wow-delay=".1s">
 
 					<div class="numbers__value numbers__value--small">
 						от <span class="numbers__value-mark numbers__value-mark--small">200 000</span> руб.
@@ -278,7 +279,7 @@
 					<div class="numbers__text">Паушальный взнос </div>
 
 				</div>
-				<div class="numbers__col">
+				<div class="numbers__col wow bounceInRight">
 
 					<div class="numbers__value">
 						от <span class="numbers__value-mark">5 000</span> руб.
@@ -286,7 +287,7 @@
 					<div class="numbers__text">Роялти</div>
 
 				</div>
-				<div class="numbers__col">
+				<div class="numbers__col wow bounceInRight" data-wow-delay=".1s">
 
 					<div class="numbers__value numbers__value--small">
 						от <span class="numbers__value-mark numbers__value-mark--small">300 000</span> руб.
@@ -340,23 +341,23 @@
 
 	<section class="moment">
 		<div class="container">
-			<h2 class="moment__title">И еще несколько важных моментов</h2>
+			<h2 class="moment__title wow fadeInDown">И еще несколько важных моментов</h2>
 			<div class="moment__row">
 				<div class="moment__col">
 
-					<div class="moment__icon moment__icon--1"></div>
+					<div class="moment__icon moment__icon--1 wow flip"></div>
 					<div class="moment__text">Мы знаем о своём бизнесе практически всё и весь свой опыт передадим тебе</div>
 
 				</div>
 				<div class="moment__col">
 
-					<div class="moment__icon moment__icon--2"></div>
+					<div class="moment__icon moment__icon--2 wow flip"></div>
 					<div class="moment__text">Доведем за руку до результата</div>
 
 				</div>
 				<div class="moment__col">
 
-					<div class="moment__icon moment__icon--3"></div>
+					<div class="moment__icon moment__icon--3 wow flip"></div>
 					<div class="moment__text">Начать можно даже если нет опыта</div>
 
 				</div>
@@ -366,7 +367,7 @@
 
 	<section class="photo">
 		<div class="container">
-			<h3 class="photo__title"> так может выглядеть твоя
+			<h3 class="photo__title wow fadeInDown"> так может выглядеть твоя
 				собственная кальянная</h3>
 		</div>
 		<div class="photo__slider-wrap">
@@ -376,13 +377,28 @@
 				<div class="swiper-wrapper">
 				
 					<div class="swiper-slide">
-						<img class="photo__slider-img" src="img/photo__slide-3.jpg" alt="photo">
+						<img class="photo__slider-img" src="img/photo__slide-2.jpg" alt="photo">
 					</div>
-					<div class="swiper-slide swiper-slide-active">
+					<div class="swiper-slide">
 						<img class="photo__slider-img" src="img/photo__slide-1.jpg" alt="photo">
 					</div>
 					<div class="swiper-slide">
-						<img class="photo__slider-img" src="img/photo__slide-2.jpg" alt="photo">
+						<img class="photo__slider-img" src="img/photo__slide-3.jpg" alt="photo">
+					</div>
+					<div class="swiper-slide">
+						<img class="photo__slider-img" src="img/photo__slide-4.jpg" alt="photo">
+					</div>
+					<div class="swiper-slide">
+						<img class="photo__slider-img" src="img/photo__slide-5.jpg" alt="photo">
+					</div>
+					<div class="swiper-slide">
+						<img class="photo__slider-img" src="img/photo__slide-6.jpg" alt="photo">
+					</div>
+					<div class="swiper-slide">
+						<img class="photo__slider-img" src="img/photo__slide-7.jpg" alt="photo">
+					</div>
+					<div class="swiper-slide">
+						<img class="photo__slider-img" src="img/photo__slide-8.jpg" alt="photo">
 					</div>
 				</div>
 				
@@ -397,7 +413,7 @@
 
 	<section class="feedback">
 		<div class="container">
-			<h3 class="feedback__title">
+			<h3 class="feedback__title  wow fadeInDown">
 				Оставляй заявку прямо сейчас! И у тебя будет своя кальянная с доходом от 300 000 рублей!
 			</h3>
 			<div class="feedback__btn-wrap">
@@ -412,7 +428,8 @@
 
 	<script src="js/jquery-3.4.1.min.js"></script>
 	<script src="js/swiper.min.js"></script>
+	<script src="js/wow.min.js"></script>
 	<script src="js/common.js"></script>
 </body>
-
+ 
 </html>
