--- a/app/index.html
+++ b/app/index.html
@@ -427,11 +427,11 @@
 	</footer>
 
 	<div class="popap">
-		<form class="popap__form" action="#">
+		<form class="popap__form" action="send.php">
 			<div class="popap__close"></div>
 			<div class="popap__title">Обратная связь</div>
-			<input class="popap__text" type="text" placeholder="Имя" required>
-			<input class="popap__text" type="text" placeholder="Телефон" required>
+			<input class="popap__text" type="text" placeholder="Имя" required name="first_name">
+			<input class="popap__text" type="text" placeholder="Телефон" required name="phone">
 			<button class="btn popap__btn" type="submit">Отправить</button>
 		</form>
 	</div>
