--- a/app/index.html
+++ b/app/index.html
@@ -427,7 +427,7 @@
 	</footer>
 
 	<div class="popap">
-		<form class="popap__form" action="send.php">
+		<form class="popap__form" action="send.php" method="post">
 			<div class="popap__close"></div>
 			<div class="popap__title">Обратная связь</div>
 			<input class="popap__text" type="text" placeholder="Имя" required name="first_name">
