--- a/app/index.html
+++ b/app/index.html
@@ -432,7 +432,7 @@
 			<div class="popap__title">Обратная связь</div>
 			<input class="popap__text" type="text" placeholder="Имя" required name="first_name">
 			<input class="popap__text" type="text" placeholder="Телефон" required name="phone">
-			<button class="btn popap__btn" type="submit">Отправить</button>
+			<button class="btn popap__btn" type="submit" name="submit">Отправить</button>
 		</form>
 	</div>
 
