Add email sending!!!

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 
-	<title>Hookah</title>
+	<title>DOXO</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -427,10 +427,10 @@
 	</footer>
 
 	<div class="popap">
-		<form class="popap__form" method="post">
+		<form id="popap__form" class="popap__form" method="post">
 			<div class="popap__close"></div>
 			<div class="popap__title">Обратная связь</div>
-			<input class="popap__text" type="text" placeholder="Имя" required name="first_name">
+			<input class="popap__text" type="text" placeholder="Имя" required name="name">
 			<input class="popap__text" type="text" placeholder="Телефон" required name="phone">
 			<button class="btn popap__btn" type="submit" name="submit">Отправить</button>
 		</form>
